--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -24,7 +21,9 @@ jobs:
       with:
         node-version: 18.x
         cache: 'npm'
-   - name: Install depencies
-     run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Install dependencies 
+      run: npm install
+    - name: Run the app
+      run: npm start 
+    - name: Run the tests
+      run: npm run test
